fixed notification alignment

--- a/webapp/src/react/app/sidebar/styles/sidebar.scss
+++ b/webapp/src/react/app/sidebar/styles/sidebar.scss
@@ -104,7 +104,7 @@ $sidebarWidth: 84px;
     animation: newNotification 1s ease forwards;
     background: $red-80;
     border-radius: 20px;
-    left: 55%; top: 40%;
+    left: 55%; top: 45%;
     padding: 3px 6px;
     padding-bottom: 1px;
     pointer-events: none;
